[package]
name = "async-shutdown"
version = "0.1.0"
authors = ["þistle <thistle-witch@protonmail.com"]
license = "AGPL-3.0-only"
edition = "2021"

[features]
default = ["std"]
alloc = []
std = ["critical-section/std", "alloc"]
tokio = ["std", "dep:tokio"]

[dependencies]
tokio = { version = "1.0", default-features = false, features = ["rt"], optional = true }
futures-util = { version = "0.3", default-features = false }
pin-project-lite = "0.2.7"
critical-section = "1.1"

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
async-shutdown = { path = ".", features = ["std", "tokio"]}